files/done get metadata permission not test and tag
